# romulus7

./: .env.example  .gitignore  Makefile  docker-compose.services.yaml  package.json  pnpm-lock.yaml  pytest.ini  romulus.code-workspace
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: routers.py
backend/app/api/v1/dispatches/: models.py  routers.py  schemas.py
backend/app/api/v1/events/: controllers.py  models.py  notify_bus.py  routers.py  schemas.py  stream.py
backend/app/api/v1/executions/: controllers.py  models.py  routers.py  schemas.py
backend/app/api/v1/health/: routers.py
backend/app/api/v1/sandboxes/: models.py  routers.py  schemas.py
backend/app/api/v1/worker_leases/: models.py  schemas.py
backend/app/api/v1/workers/: models.py  routers.py  schemas.py
backend/app/api/v1/workspaces/: models.py  routers.py  schemas.py
backend/app/core/: config.py  db.py  filters.py  models.py  pagination.py  repositories.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 2026_04_11_1901-ef93a32c22ee_workspace.py  2026_04_12_1712-42a0d3bc2cdb_worker.py  2026_04_12_1928-a9215bb6a3d1_sandbox_worker_lease_execution.py  2026_04_12_2051-6269073b6b0b_dispatch.py  2026_04_12_2237-0f85a2d4a7d1_event.py  2026_04_13_1015-5e8b7f4b96c2_execution_name.py  2026_04_13_1100-a3c1d8e5f901_execution_metadata.py  2026_04_13_1343-3e8ad4d27076_realign.py  2026_04_13_1505-2bb6d4e3fd80_dispatch_terminated.py
worker/: pyproject.toml
worker/app/: main.py
worker/app/api/v1/: routers.py
worker/app/core/: config.py  state.py
(+42 files in other folders)
